@@ -1,5 +1,12 @@
 2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Mono.Debugging.Evaluation/TypeValueReference.cs:
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
+	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Add
+	  support for examining nested types.
+
+2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Debugging.Client/DebuggerSession.cs: Improve error
 	  handling. Exceptions can now be intercept using a delegate.
 
